# rust101-course

./: LICENSE  README.md
module3/: README.md
module3/src/: bit_bytes.rs  nomes.rs  tipos.rs
module4/: Cargo.toml
module4/src/: condicionais.rs  repeticoes.rs  tabela_verdade.rs
module5/: Cargo.toml
module5/src/: funcoes.rs  gerenciamento_memoria.rs  lib.rs
module6/: README.md
module7/: Cargo.toml  README.md
module7/src/: enum.rs  main.rs  patters-match.rs  struct.rs  trait.rs
module8/: Cargo.toml
module8/server-rust/: Cargo.toml
module8/server-rust/src/: main.rs
module8/src/: lib.rs
